[package]
name = "website_crawler"
version = "0.6.59"
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]
edition = "2018"
description = "gRPC tokio based web crawler"
license = "MIT"
readme = "README.md"
repository = "https://github.com/a11ywatch/crawler"
keywords = ["crawler", "web-crawler", "spider", "web-indexer", "site-map-generator"]
categories = ["accessibility", "asynchronous"]
include = ["src/*", "build.rs", "proto/*", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "^1.24.2", features = [ "rt-multi-thread", "net", "macros", "sync", "time" ] }
tokio-stream = "0.1.11"
tonic = { version = "0.8.3" }
prost = "0.11.3"
prost-types = "0.11.2"
reqwest = { version = "0.11.13", features = ["brotli", "native-tls-alpn", "socks"] }
scraper = "0.14"
url = "2.3.1"
regex = { version = "^1.5.0", optional = true }
hashbrown = { version = "0.13.1" }
log = "0.4.16"
lazy_static = "1.4.0"
ua_generator = { git = "https://github.com/a11ywatch/ua_generator.git", version = "0.3.5" }
percent-encoding = "2.1.0"
env_logger = "0.9.0"
string_concat = "0.0.1"
sitemap = "0.4.1"
xml-rs = "0.8.4"

[target.'cfg(all(not(target_os = "android"), not(target_os = "freebsd")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-sys = { version = "0.5.0", optional = true }

[[bin]]
name = "health_client"
path = "src/hc_client.rs"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
quote = "1.0.18"
failure_derive = "0.1.8"
cc = "^1.0.13"
rustc_version = "0.4.0"
fs_extra = "^1.1"
os_info = "3"

[features]
jemalloc = ["jemallocator", "jemalloc-sys"]

[profile.release]
opt-level = 1