[package]
name = "website_crawler"
version = "0.9.4"
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]
edition = "2021"
description = "gRPC tokio based web crawler"
license = "MIT"
readme = "README.md"
repository = "https://github.com/a11ywatch/crawler"
keywords = ["crawler", "web-crawler", "spider", "web-indexer", "site-map-generator"]
categories = ["accessibility", "asynchronous"]
include = ["src/*", "build.rs", "proto/*", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "macros", "sync", "time", "parking_lot" ] }
tonic = { version = "0.9.2" }
prost = "0.11.3"
prost-types = "0.11.2"
lazy_static = "1.4.0"
env_logger = "0.9.0"
string_concat = "0.0.1"
spider = { version = "1.93.0", features = ["sync", "control", "sitemap"]}

[target.'cfg(all(not(target_os = "android"), not(target_os = "freebsd")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-sys = { version = "0.5.0", optional = true }

[[bin]]
name = "health_client"
path = "src/hc_client.rs"

[build-dependencies]
tonic-build = { version = "0.9.1", features = ["prost"] }
quote = "1.0.23"
failure_derive = "0.1.8"
cc = { version = "^1.0.83", features = ["parallel"] }
rustc_version = "0.4.0"
fs_extra = "^1.1"
os_info = "3"

[features]
jemalloc = ["jemallocator", "jemalloc-sys"]
regex = ["spider/regex"]
chrome = ["spider/chrome"]
smart = ["spider/smart"]